--- a/app/product.html
+++ b/app/product.html
@@ -163,26 +163,11 @@
           <div class="product-gallery-slider-wrapper">
             <div class="product-gallery-slider">
               <!-- Для отображения изображения в пагинации, нужно к слайду добавить "data-image" атрибут с урлом -->
-              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg">
-                <img
-                  src="./images/dest/img/product-gal-img.jpg"
-                  alt="product"
-                  data-rjs="2"
-                />
+              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2" style="background-image: url('./images/dest/img/product-gal-img.jpg');">
               </div>
-              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg">
-                <img
-                  src="./images/dest/img/product-gal-img.jpg"
-                  alt="product"
-                  data-rjs="2"
-                />
+              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2" style="background-image: url('./images/dest/img/product-gal-img.jpg');">
               </div>
-              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg">
-                <img
-                  src="./images/dest/img/product-gal-img.jpg"
-                  alt="product"
-                  data-rjs="2"
-                />
+              <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg" data-rjs="2" style="background-image: url('./images/dest/img/product-gal-img.jpg');">
               </div>
             </div>
           </div>
