--- a/app/about.html
+++ b/app/about.html
@@ -147,7 +147,11 @@
               <p>Основатель бренда Amour</p>
             </div>
           </div>
-          <div class="about-story-img-block"></div>
+          <div class="about-story-img-block">
+            <div class="about-story-img-block-img">
+
+            </div>
+          </div>
         </div>
         <div class="about-gal">
           <div class="about-gal-title">
