--- a/app/product.html
+++ b/app/product.html
@@ -389,11 +389,11 @@
               </li>
             </ul>
             <div class="product-about-buy-btns">
-              <button class="btn-gold product-about-fastbuy-btn" onclick="onTogglePopUpFb()"
+              <button class="btn-gold product-about-fastbuy-btn" onclick="onTogglePopUpFb()" disabled
                 >Быстрая покупка</button
               >
               <button
-                class="btn-primary btn-primary--icon product-about-basket-btn"
+                class="btn-primary btn-primary--icon product-about-basket-btn product-about-basket-btn--basket"
                 onclick="onAddBasket(this)"
               >
                 <svg class="svg-icon btn-basket-icon">
