--- a/app/catalog.html
+++ b/app/catalog.html
@@ -356,6 +356,9 @@
                     <span class="custom-checkbox-text">В наличии</span>
                   </label>
                 </li>
+                <li>
+                  <button class="btn-text-underline">Очистить фильтр</button>
+                </li>
               </ul>
               <div class="catalog-nav-footer">
                 <button class="btn-primary btn-primary--catalog-nav-footer" disabled onclick="onToggleCatalogMenu()">
