--- a/app/catalog.html
+++ b/app/catalog.html
@@ -34,6 +34,7 @@
           <img src="./images/dest/icons/header-logo.svg" alt="лого" />
         </a>
       <nav class="main-header-nav">
+        <div class="main-header-nav-wrapper" >
         <ul class="main-header-nav-item-wrapper">
           <li class="main-header-nav-item">
             <a href="#">Каталог</a>
@@ -67,6 +68,7 @@
           </li>
           <li class="main-header-nav-lang-item"><a href="#">en</a></li>
         </ul>
+      </div>
       </nav>
       
       <div class="main-header-link-block">
