--- a/app/contacts.html
+++ b/app/contacts.html
@@ -33,41 +33,43 @@
         <a class="main-header-logo" href="/">
           <img src="./images/dest/icons/header-logo.svg" alt="лого" />
         </a>
-      <nav class="main-header-nav">
-        <ul class="main-header-nav-item-wrapper">
-          <li class="main-header-nav-item">
-            <a href="#">Каталог</a>
-          </li>
-          <li class="main-header-nav-item">
-            <a href="#">О бренде</a>
-          </li>
-          <li class="main-header-nav-item">
-            <a href="#" class="active">Таблица размеров</a>
-          </li>
-          <li class="main-header-nav-item">
-            <a href="#">Доставка и возврат</a>
-          </li>
-          <li class="main-header-nav-item">
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
-        <ul class="main-header-nav-location">
-          <li class="main-header-nav-location-item">
-            <svg class="svg-icon main-header-nav-location-item-icon">
-              <use
-                xlink:href="./images/sprites/svg/sprite.symbol.svg#location"
-              ></use>
-            </svg>
-            <span class="active">Москва</span>
-          </li>
-        </ul>
-        <ul class="main-header-nav-lang">
-          <li class="main-header-nav-lang-item">
-            <a href="#" class="active">ru</a>
-          </li>
-          <li class="main-header-nav-lang-item"><a href="#">en</a></li>
-        </ul>
-      </nav>
+        <nav class="main-header-nav">
+          <div class="main-header-nav-wrapper" >
+          <ul class="main-header-nav-item-wrapper">
+            <li class="main-header-nav-item">
+              <a href="#">Каталог</a>
+            </li>
+            <li class="main-header-nav-item">
+              <a href="#">О бренде</a>
+            </li>
+            <li class="main-header-nav-item">
+              <a href="#" class="active">Таблица размеров</a>
+            </li>
+            <li class="main-header-nav-item">
+              <a href="#">Доставка и возврат</a>
+            </li>
+            <li class="main-header-nav-item">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+          <ul class="main-header-nav-location">
+            <li class="main-header-nav-location-item">
+              <svg class="svg-icon main-header-nav-location-item-icon">
+                <use
+                  xlink:href="./images/sprites/svg/sprite.symbol.svg#location"
+                ></use>
+              </svg>
+              <span class="active">Москва</span>
+            </li>
+          </ul>
+          <ul class="main-header-nav-lang">
+            <li class="main-header-nav-lang-item">
+              <a href="#" class="active">ru</a>
+            </li>
+            <li class="main-header-nav-lang-item"><a href="#">en</a></li>
+          </ul>
+        </div>
+        </nav>
       
       <div class="main-header-link-block">
         <div class="main-header-search-inner">
