add country set

--- a/app/delivery.html
+++ b/app/delivery.html
@@ -301,7 +301,7 @@
       var inputPhone = document.querySelector('#phone');
       window.intlTelInput(inputPhone, {
         initialCountry: "ru",
-        preferredCountries: [],
+        preferredCountries: ['ru', 'kz', 'ua', 'by'],
         separateDialCode: true
       });
 
