--- a/app/catalog.html
+++ b/app/catalog.html
@@ -376,8 +376,51 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
+                </div>
+                <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
+                  <strong>Кофта</strong> с объёмными пл
+                </h4>
+                <div class="product-recommend-item-price product-recommend-item-price--catalog">
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                </div>
+                <div class="product-recommend-item-color product-recommend-item-color--catalog">
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style ="background-color: #000000;"
+                  ></div>
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style="background-color: #8c8c8c;"
+                  ></div>
+                  <div
+                    class="color-item color-item--border product-recommend-color-item"
+                    style="background-color: #ffffff; border-color: #000000;"
+                  ></div>
+                </div>
+              </a>
+              <button
+                class="btn-heart btn-heart--big product-recommend-btn-heart"
+                onclick="onAddLike(this)"
+              >
+              <svg class="svg-icon btn-heart-icon-reccomend">
+                <use
+                  xlink:href="./images/sprites/svg/sprite.symbol.svg#heart"
+                ></use>
+              </svg>
+              <span class="visually-hidden">понравилось</span>
+              </button>
+            </div>
+
+            <div class="catalog-gal-column">
+              <a class="product-recommend-item product-recommend-item--catalog" href="#">
+                <div class="product-recommend-item-img product-recommend-item-img--catalog">
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -419,51 +462,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
-                </div>
-                <div class="product-recommend-item-preorder-wrapper">
-                  <p class="product-recommend-item-preorder">Предзаказ</p>
-                </div>
-                <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
-                  <strong>Кофта</strong> с объёмными пл
-                </h4>
-                <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                </div>
-                <div class="product-recommend-item-color product-recommend-item-color--catalog">
-                  <div
-                    class="color-item product-recommend-color-item"
-                    style="background-color: #000000;"
-                  ></div>
-                  <div
-                    class="color-item product-recommend-color-item"
-                    style="background-color: #8c8c8c;"
-                  ></div>
-                  <div
-                    class="color-item color-item--border product-recommend-color-item"
-                    style="background-color: #ffffff; border-color: #000000;"
-                  ></div>
-                </div>
-              </a>
-              <button
-                class="btn-heart btn-heart--big product-recommend-btn-heart"
-                onclick="onAddLike(this)"
-              >
-              <svg class="svg-icon btn-heart-icon-reccomend">
-                <use
-                  xlink:href="./images/sprites/svg/sprite.symbol.svg#heart"
-                ></use>
-              </svg>
-              <span class="visually-hidden">понравилось</span>
-              </button>
-            </div>
-
-            <div class="catalog-gal-column">
-              <a class="product-recommend-item product-recommend-item--catalog" href="#">
-                <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -504,8 +504,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -546,8 +546,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -588,8 +588,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -630,8 +630,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -672,8 +672,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/frame-image2.jpg');"></div>
-                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"   data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/frame-image2.jpg"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" data-rjs="2" style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');" data-src="./images/dest/img/recommend-img2.jpg"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -803,5 +803,6 @@
       </div>
     </footer>
     <script src="js/app.min.js"></script>
+    <script>lazyload();</script>
   </body>
 </html>
