basket popup fix

--- a/app/product.html
+++ b/app/product.html
@@ -748,6 +748,8 @@
           <p class="product-about-check-subtitle">
             Товар добавлен в корзину
           </p>
+          <div class="product-about-check-img" style="background-image: url('./images/dest/img/product-gal-img.jpg');" data-rjs="2">
+          </div>
           <h4 class="product-about-check-title">
             Костюм Amour (голубой) 32 EU (XXS)
           </h4>
